# fonts

./: CLAUDE.md  README.md  config.py  downloader.py  font_merge.py  installer.py  main.py  manifest.py  merger.py  pyproject.toml
fonts/: manifest.json
