[project]
name = "font-merge"
version = "1.0.0"
description = "Font merging tool"
requires-python = ">=3.14"
dependencies = [
    "fonttools>=4.62.1",
    "httpx>=0.27.0",
]

[tool.font-merge]
# 中文字体（基础字体，在前）
# 使用 Windows 系统字体（TTF 格式）
chinese-fonts = [
    { name = "MicrosoftYaHei", path = "C:/Windows/Fonts/msyh.ttc", index = 0 },
    { name = "MicrosoftYaHeiUI", path = "C:/Windows/Fonts/msyh.ttc", index = 1 },
    { name = "SimSun", path = "C:/Windows/Fonts/simsun.ttc", index = 0 },
    { name = "MicrosoftMHei", path = "C:/Windows/Fonts/msjh.ttc", index = 0 },
]

# 英文字体（合并字体，在后）
# GitHub Stars 前20等宽英文字体 (仅 TTF 格式)
english-fonts = [
    # 1. Fira Code - 81,354 stars (TTF)
    { name = "FiraCode", github = "https://github.com/tonsky/FiraCode", download = "https://github.com/tonsky/FiraCode/releases/download/6.2/Fira_Code_v6.2.zip", stars = 81354 },
    # 2. Maple Font - 24,809 stars (TTF)
    { name = "MapleFont", github = "https://github.com/subframe7536/maple-font", download = "https://github.com/subframe7536/maple-font/releases/download/v7.9/MapleMono-CN.zip", stars = 24809 },
    # 3. Source Code Pro - 20,382 stars (TTF)
    { name = "SourceCodePro", github = "https://github.com/adobe-fonts/source-code-pro", download = "https://github.com/adobe-fonts/source-code-pro/releases/download/2.042R-u/1.062R-i/1.026R-vf/TTF-source-code-pro-2.042R-u_1.062R-i.zip", stars = 20382 },
    # 4. Hack - 17,186 stars (TTF)
    { name = "Hack", github = "https://github.com/source-foundry/Hack", download = "https://github.com/source-foundry/Hack/releases/download/v3.003/Hack-v3.003-ttf.zip", stars = 17186 },
    # 5. JetBrains Mono - 12,544 stars (TTF)
    { name = "JetBrainsMono", github = "https://github.com/JetBrains/JetBrainsMono", download = "https://github.com/JetBrains/JetBrainsMono/releases/download/v2.304/JetBrainsMono-2.304.zip", stars = 12544 },
    # 6. Intel One Mono - 9,880 stars (TTF)
    { name = "IntelOneMono", github = "https://github.com/intel/intel-one-mono", download = "https://github.com/intel/intel-one-mono/releases/download/V1.2.1/ttf.zip", stars = 9880 },
    # 7. Mononoki - 4,602 stars (TTF)
    { name = "Mononoki", github = "https://github.com/madmalik/mononoki", download = "https://github.com/madmalik/mononoki/releases/download/1.3/mononoki.zip", stars = 4602 },
    # 8. JuliaMono - 1,625 stars (TTF)
    { name = "JuliaMono", github = "https://github.com/cormullion/juliamono", download = "https://github.com/cormullion/juliamono/releases/download/v0.055/JuliaMono-ttf.zip", stars = 1625 },
    # 9. Inconsolata - 1,532 stars (TTF)
    { name = "Inconsolata", github = "https://github.com/googlefonts/Inconsolata", download = "https://github.com/googlefonts/Inconsolata/releases/download/v3.000/fonts_ttf.zip", stars = 1532 },
    # Windows 系统字体
    { name = "CascadiaMono", path = "C:/Windows/Fonts/CascadiaMono.ttf" },
    { name = "CascadiaCode", path = "C:/Windows/Fonts/CascadiaCode.ttf" },
    { name = "Consolas", path = "C:/Windows/Fonts/consola.ttf" },
]

# 输出目录
output-dir = "output"

# 缓存目录 (用于下载的字体)
cache-dir = "cache"
