[project]
name = "font-merge"
version = "1.0.0"
description = "Font merging tool"
requires-python = ">=3.14"
dependencies = [
    "fonttools>=4.62.1",
    "httpx>=0.27.0",
    "py7zr>=0.22.0",
]

[tool.font-merge]
# 中文字体（基础字体，在前）
# GitHub Stars 前5简体中文字体
chinese-fonts = [
    # 1. LXGW WenKai 霞鹜文楷 - 23,718 stars
    { name = "LXGWWenKai", github = "https://github.com/lxgw/LxgwWenKai", download = "https://github.com/lxgw/LxgwWenKai/releases/download/v1.522/LXGWWenKai-Regular.ttf", stars = 23718 },
    # 2. Source Han Sans 思源黑体 - 16,453 stars
    { name = "SourceHanSansSC", github = "https://github.com/adobe-fonts/source-han-sans", download = "https://github.com/adobe-fonts/source-han-sans/releases/download/2.005R/09_SourceHanSansSC.zip", stars = 16453 },
    # 3. Sarasa Gothic 更纱黑体 - 12,014 stars
    { name = "SarasaGothicSC", github = "https://github.com/be5invis/Sarasa-Gothic", download = "https://github.com/be5invis/Sarasa-Gothic/releases/download/v1.0.37/SarasaGothicSC-TTF-1.0.37.7z", stars = 12014 },
    # 4. Source Han Serif 思源宋体 - 9,356 stars
    { name = "SourceHanSerifSC", github = "https://github.com/adobe-fonts/source-han-serif", download = "https://github.com/adobe-fonts/source-han-serif/releases/download/2.003R/09_SourceHanSerifSC.zip", stars = 9356 },
    # 5. Zhuque Fangsong 朱雀仿宋 - 3,317 stars
    { name = "ZhuqueFangsong", github = "https://github.com/TrionesType/zhuque", download = "https://github.com/TrionesType/zhuque/releases/download/v0.212/ZhuqueFangsong-v0.212.zip", stars = 3317 },
]

# 英文字体（合并字体，在后）
# GitHub Stars 前20等宽英文字体
english-fonts = [
    # 1. Fira Code - 81,355 stars
    { name = "FiraCode", github = "https://github.com/tonsky/FiraCode", download = "https://github.com/tonsky/FiraCode/releases/download/6.2/Fira_Code_v6.2.zip", stars = 81355 },
    # 2. Cascadia Code - 27,602 stars
    { name = "CascadiaCode", github = "https://github.com/microsoft/cascadia-code", download = "https://github.com/microsoft/cascadia-code/releases/download/v2407.24/CascadiaCode-2407.24.zip", stars = 27602 },
    # 3. Maple Mono - 24,838 stars
    { name = "MapleFont", github = "https://github.com/subframe7536/maple-font", download = "https://github.com/subframe7536/maple-font/releases/download/v7.9/MapleMono-TTF.zip", stars = 24838 },
    # 4. Iosevka - 21,948 stars
    { name = "Iosevka", github = "https://github.com/be5invis/Iosevka", download = "https://github.com/be5invis/Iosevka/releases/download/v34.3.0/PkgTTC-Iosevka-34.3.0.zip", stars = 21948 },
    # 5. Source Code Pro - 20,382 stars
    { name = "SourceCodePro", github = "https://github.com/adobe-fonts/source-code-pro", download = "https://github.com/adobe-fonts/source-code-pro/releases/download/2.042R-u/1.062R-i/1.026R-vf/TTF-source-code-pro-2.042R-u_1.062R-i.zip", stars = 20382 },
    # 6. Monaspace - 18,720 stars
    { name = "Monaspace", github = "https://github.com/githubnext/monaspace", download = "https://github.com/githubnext/monaspace/releases/download/v1.400/monaspace-frozen-v1.400.zip", stars = 18720 },
    # 7. Hack - 17,185 stars
    { name = "Hack", github = "https://github.com/source-foundry/Hack", download = "https://github.com/source-foundry/Hack/releases/download/v3.003/Hack-v3.003-ttf.zip", stars = 17185 },
    # 8. JetBrains Mono - 12,547 stars
    { name = "JetBrainsMono", github = "https://github.com/JetBrains/JetBrainsMono", download = "https://github.com/JetBrains/JetBrainsMono/releases/download/v2.304/JetBrainsMono-2.304.zip", stars = 12547 },
    # 9. IBM Plex Mono - 11,281 stars
    { name = "IBMPlexMono", github = "https://github.com/IBM/plex", download = "https://github.com/IBM/plex/releases/download/%40ibm/plex-mono%401.1.0/ibm-plex-mono.zip", stars = 11281 },
    # 10. Monocraft - 9,987 stars (Minecraft风格像素字体)
    { name = "Monocraft", github = "https://github.com/IdreesInc/Monocraft", download = "https://github.com/IdreesInc/Monocraft/releases/download/v4.2.1/Monocraft-ttf.zip", stars = 9987 },
    # 11. Intel One Mono - 9,880 stars
    { name = "IntelOneMono", github = "https://github.com/intel/intel-one-mono", download = "https://github.com/intel/intel-one-mono/releases/download/V1.4.0/ttf.zip", stars = 9880 },
    # 12. Monoid - 7,969 stars (使用 Nerd Fonts 打包版本)
    { name = "Monoid", github = "https://github.com/larsenwork/monoid", download = "https://github.com/ryanoasis/nerd-fonts/releases/download/v3.4.0/Monoid.zip", stars = 7969 },
    # 13. Fantasque Sans - 7,347 stars
    { name = "FantasqueSans", github = "https://github.com/belluzj/fantasque-sans", download = "https://github.com/belluzj/fantasque-sans/releases/download/v1.8.0/FantasqueSansMono-Normal.zip", stars = 7347 },
    # 14. Hasklig - 5,762 stars
    { name = "Hasklig", github = "https://github.com/i-tu/Hasklig", download = "https://github.com/i-tu/Hasklig/releases/download/v1.2/Hasklig-1.2.zip", stars = 5762 },
    # 15. Mononoki - 4,602 stars
    { name = "Mononoki", github = "https://github.com/madmalik/mononoki", download = "https://github.com/madmalik/mononoki/releases/download/1.6/mononoki.zip", stars = 4602 },
    # 16. Recursive - 3,746 stars
    { name = "Recursive", github = "https://github.com/arrowtype/recursive", download = "https://github.com/arrowtype/recursive/releases/download/v1.085/ArrowType-Recursive-1.085.zip", stars = 3746 },
    # 17. Victor Mono - 3,732 stars (从 Google Fonts 获取 TTF)
    { name = "VictorMono", github = "https://github.com/rubjo/victor-mono", download = "https://fonts.gstatic.com/s/victormono/v5/Yq6H-LGQWyfv-LGy7lEO09xRn-T81AVB_tCyO87NhA.ttf", stars = 3732 },
    # 18. Cozette - 3,509 stars
    { name = "Cozette", github = "https://github.com/the-moonwitch/Cozette", download = "https://github.com/the-moonwitch/Cozette/releases/download/v.1.30.0/CozetteVector.ttf", stars = 3509 },
    # 19. Geist Mono - 3,347 stars
    { name = "GeistMono", github = "https://github.com/vercel/geist-font", download = "https://github.com/vercel/geist-font/releases/download/1.8.0/geist-font-1.8.0.zip", stars = 3347 },
    # 20. Meslo LG - 2,717 stars (使用 Nerd Fonts 打包版本)
    { name = "MesloLG", github = "https://github.com/andreberg/Meslo-Font", download = "https://github.com/ryanoasis/nerd-fonts/releases/download/v3.4.0/Meslo.zip", stars = 2717 },
]

# 输出目录
output-dir = "output"

# 缓存目录 (用于下载的字体)
cache-dir = "cache"
